--- a/condition.ipynb
+++ b/condition.ipynb
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "invalid Gender\n"
+      "invalid DOB\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
     "if len(Name)>=4 and len(Name)<15:\n",
     "    if '@' in email and email.islower() and len(email)>15:\n",
     "        if len(Mobile_Number)>10:\n",
-    "            if len(DOB)<7:\n",
+    "            if len(DOB)>=4 and len(DOB)<10:\n",
     "                if len(Gender) >=4 and len(Gender)<=4:\n",
     "                    if len(Father_Name) >=15:\n",
     "                        if len(pwd) >=6:\n",
@@ -187,6 +187,13 @@
     "else:\n",
     "    print(\"invalid Father_Name\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
