--- a/loop.ipynb
+++ b/loop.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -723,6 +723,665 @@
     "for x in range(2, 1002, 2):\n",
     "    print(x)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reserve Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10, -2, -1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enumerate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 45)\n",
+      "(1, 25)\n",
+      "(2, 63)\n",
+      "(3, 89)\n",
+      "(4, 78)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [45,25,63,89,78]\n",
+    "for item in enumerate(data):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 45\n",
+      "1 25\n",
+      "2 63\n",
+      "3 89\n",
+      "4 78\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,v in enumerate(data):\n",
+    "    print(i, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total app: 53\n"
+     ]
+    }
+   ],
+   "source": [
+    "apps = ['ola','myjio','whatapp','blinkit','jiotv','raleme','chrome',\n",
+    "'camera','uber','facebook','inst','contact','calcultor','book my show',\n",
+    "'vlc','mx player','adobe','jiojion','railyatri',\n",
+    "'brainly', 'ajio', 'bigbskit', 'kotak', 'phonpe', 'gpay', 'sonyliv', \n",
+    "'kuku', 'irctc', 'bsnl', 'exampur', 'zomato', 'opera', 'acko', \n",
+    "'flipkart', 'amzazon', 'hotstar', 'maps', 'paytm', 'phone', \n",
+    "'music', 'telegram', 'twittwe', 'vyom','playstore','olaelectric'\n",
+    "'onescore','maps','kotak','hotstar' \n",
+    "'shareme', 'tataneu', 'rapido', 'youtube', 'yono','yono']\n",
+    "print(f'total app: {len(apps)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[1,5,6,8,9]\n",
+    "y=[10,20,63,45,78]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "25\n",
+      "69\n",
+      "53\n",
+      "87\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,j in zip(x,y):\n",
+    "    out = i + j\n",
+    "    print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "25\n",
+      "5\n",
+      "12\n",
+      "125\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,5,1,2,5,2,5]\n",
+    "y = [2,1,5,2,5,5]\n",
+    "z = [2,5,1,3,5,2]\n",
+    "for i,j,k in zip(x,y,z):\n",
+    "    r = i*j*k # some equation\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "25\n",
+      "5\n",
+      "12\n",
+      "125\n",
+      "20\n",
+      "240\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,5,1,3,5,2,8]\n",
+    "y = [2,1,5,2,5,5,6]\n",
+    "z = [2,5,1,2,5,2,5]\n",
+    "for i,j,k in zip(x,y,z):\n",
+    "    r = i*j*k\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n",
+      "myjio\n",
+      "whatapp\n",
+      "blinkit\n",
+      "jiotv\n",
+      "raleme\n",
+      "chrome\n",
+      "camera\n",
+      "uber\n",
+      "facebook\n",
+      "inst\n",
+      "contact\n",
+      "calcultor\n",
+      "book my show\n",
+      "vlc\n",
+      "mx player\n",
+      "adobe\n",
+      "jiojion\n",
+      "railyatri\n",
+      "brainly\n",
+      "ajio\n",
+      "bigbskit\n",
+      "kotak\n",
+      "phonpe\n",
+      "gpay\n",
+      "sonyliv\n",
+      "kuku\n",
+      "irctc\n",
+      "bsnl\n",
+      "exampur\n",
+      "zomato\n",
+      "opera\n",
+      "acko\n",
+      "flipkart\n",
+      "amzazon\n",
+      "hotstar\n",
+      "maps\n",
+      "paytm\n",
+      "phone\n",
+      "music\n",
+      "telegram\n",
+      "twittwe\n",
+      "vyom\n",
+      "playstore\n",
+      "olaelectriconescore\n",
+      "maps\n",
+      "kotak\n",
+      "hotstarshareme\n",
+      "tataneu\n",
+      "rapido\n",
+      "youtube\n",
+      "yono\n",
+      "yono\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in apps:\n",
+    "    print(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ola\n",
+      "1 myjio\n",
+      "2 whatapp\n",
+      "3 blinkit\n",
+      "4 jiotv\n",
+      "5 raleme\n",
+      "6 chrome\n",
+      "7 camera\n",
+      "8 uber\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,app in enumerate(apps):\n",
+    "    if i > 8:\n",
+    "        break\n",
+    "    print(i,app)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n",
+      "myjio\n",
+      "whatapp\n",
+      "blinkit\n",
+      "jiotv\n",
+      "raleme\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in apps:\n",
+    "    if app == 'chrome':\n",
+    "        break\n",
+    "    print(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n",
+      "myjio\n",
+      "whatapp\n",
+      "blinkit\n",
+      "jiotv\n",
+      "raleme\n",
+      "chrome\n",
+      "camera\n",
+      "uber\n",
+      "facebook\n",
+      "inst\n",
+      "contact\n",
+      "calcultor\n",
+      "book my show\n",
+      "vlc\n",
+      "mx player\n",
+      "adobe\n",
+      "jiojion\n",
+      "railyatri\n",
+      "brainly\n",
+      "ajio\n",
+      "bigbskit\n",
+      "kotak\n",
+      "phonpe\n",
+      "gpay\n",
+      "sonyliv\n",
+      "kuku\n",
+      "irctc\n",
+      "bsnl\n",
+      "exampur\n",
+      "z found in zomato\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if any app contain 'z' in name, then stop\n",
+    "for app in apps:\n",
+    "    if 'z' in app:\n",
+    "        print(f'z found in {app}')\n",
+    "        break\n",
+    "    print(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n",
+      "whatapp\n",
+      "raleme\n",
+      "camera\n",
+      "facebook\n",
+      "contact\n",
+      "calcultor\n",
+      "mx player\n",
+      "adobe\n",
+      "railyatri\n"
+     ]
+    }
+   ],
+   "source": [
+    "c =0\n",
+    "for app in apps:\n",
+    "    if 'a' in app:\n",
+    "        print(app)\n",
+    "        c += 1\n",
+    "    if c == 10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adobe\n",
+      "rapido\n"
+     ]
+    }
+   ],
+   "source": [
+    "cc = 0\n",
+    "for app in apps:\n",
+    "    if 'd' in app:\n",
+    "        print(app)\n",
+    "        c +=1\n",
+    "    if c == 5:\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found z in zomato\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in apps:\n",
+    "    if 'z' in app:\n",
+    "        print(f'found z in {app}')\n",
+    "        break\n",
+    "        print(app)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for app in apps:\n",
+    "    if 'rapido' in app:\n",
+    "        break\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "5\n",
+      "5\n",
+      "7\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =[1,2,0,5,5,0,7,6,8]\n",
+    "for i in x:\n",
+    "    if i == 0: continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n",
+      "myjio\n",
+      "whatapp\n",
+      "blinkit\n",
+      "jiotv\n",
+      "inst\n",
+      "contact\n",
+      "calcultor\n",
+      "book my show\n",
+      "vlc\n",
+      "jiojion\n",
+      "railyatri\n",
+      "brainly\n",
+      "ajio\n",
+      "bigbskit\n",
+      "kotak\n",
+      "gpay\n",
+      "sonyliv\n",
+      "kuku\n",
+      "irctc\n",
+      "bsnl\n",
+      "zomato\n",
+      "acko\n",
+      "flipkart\n",
+      "amzazon\n",
+      "hotstar\n",
+      "maps\n",
+      "paytm\n",
+      "music\n",
+      "vyom\n",
+      "maps\n",
+      "kotak\n",
+      "rapido\n",
+      "yono\n",
+      "yono\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in apps:\n",
+    "    if 'e' in app: continue\n",
+    "    print(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vlc\n",
+      "bsnl\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in apps:\n",
+    "    if  'e' in app or 'a' in app or 'i' in app or 'o' in app or 'u' in app: continue\n",
+    "    print(app)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum of all digit\n",
+    "# jab tak zero achive nahi hota hai tab tak loop chalta rahega\n",
+    "num = 123451457865895\n",
+    "total = 0\n",
+    "while num > 0:\n",
+    "    total += num % 10\n",
+    "    num = num // 10\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "retry = 0\n",
+    "while retry <3:\n",
+    "    pin = input('enter pin:')\n",
+    "    if pin == '1234':\n",
+    "        print(\"Welcome\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(f'wrong pin, {2- retry} tries left')\n",
+    "        retry += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "h\n",
+      "i\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = input('enter ur message')\n",
+    "for char in message:\n",
+    "    if char == ' ':\n",
+    "        break\n",
+    "    print(char)\n",
+    "else:\n",
+    "    print('message does not contain space')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
