--- a/func.ipynb
+++ b/func.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'python\\n\\ndef fun_name(<params...>):\\n    statement 1\\n    statement 2\\n    ...\\n    satement n\\n    <return values...>\\n    \\ncalling function\\nfun_name(parmas...>)'"
+       "'fun_name(<params...):\\n    statement 1\\n    statement 2\\n    ...\\n    satement n\\n    <return values...>\\n    \\ncalling function\\nfun_name(parmas...>)'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,9 +19,7 @@
    "source": [
     "#Syntax\n",
     "\n",
-    "'''python\n",
-    "\n",
-    "def fun_name(<params...>):\n",
+    "'''fun_name(<params...):\n",
     "    statement 1\n",
     "    statement 2\n",
     "    ...\n",
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,25 +40,6 @@
     "    print('Welcome to the function')\n",
     "    print('hope you are happy')\n",
     "    print('have a nice day')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the function\n",
-      "hope you are happy\n",
-      "have a nice day\n"
-     ]
-    }
-   ],
-   "source": [
-    "greetings()"
    ]
   },
   {
@@ -84,7 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the function\n",
+      "hope you are happy\n",
+      "have a nice day\n"
+     ]
+    }
+   ],
+   "source": [
+    "greetings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'🙈😺😺'"
+       "'😊🤡😒'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,23 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🥸🙉😒\n",
-      "🙈🤡😺\n",
-      "😺😺😒\n",
-      "🐵😂🙉\n",
-      "😂😒🙈\n",
-      "🙈😺😺\n",
-      "🤡😊😂\n",
-      "😺😊🤡\n",
-      "😂😊🥸\n",
-      "🙉🙈😺\n"
+      "😺😊😂\n",
+      "🤡😒😺\n",
+      "🙈😒😺\n",
+      "🙉🙈😺\n",
+      "🙈🙈🙉\n",
+      "😺🙈🙈\n",
+      "😺😒😊\n",
+      "🙉😒😊\n",
+      "😂😺🥸\n",
+      "🙈😺🐵\n"
      ]
     }
    ],
