--- a/loop.ipynb
+++ b/loop.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "# if one value is passed in rnage(), then that is end value \n",
+    "# if one value is passed in range(), then that is end value \n",
     "for x in range(1000):\n",
     "    print(x, end=' | ') # end is a setting for print function\n",
     "    # by default print changes line, but here we are putting spaces"
